--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,26 @@
+html {
+  width: 100vw;
+  height: 100vh; }
+
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0; }
+
 canvas {
-  border: 1px dashed red; }
+  border: 1px dashed red;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box; }
 
 /* Scale canvas with resize attribute to full size */
 canvas[resize] {
   width: 100%;
   height: 100%; }
 
-.images {
-  display: none; }
+.container {
+  position: absolute; }
+  .container .images {
+    display: none; }
 
 /*# sourceMappingURL=styles.css.map */
